<resources>
    <string name="app_name">foodapp</string>
    <string name="txt_breakfast">Breakfast</string>
    <string name="txt_vegetarian">Vegetarian</string>
    <string name="txt_dessert">Dessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyName">garlic Butter shrimp</string>
    <string name="_1_2k">1.2k</string>
    <string name="cooked">cooked</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_imageview">imageview</string>
    <string name="_7_2">7,2</string>
    <string name="txt_calories">Calories</string>
    <string name="txt_carbo">Carbo</string>
    <string name="txt_protein">Protein</string>
    <string name="txt_description">Description</string>
    <string name="txt_recipes">Recipes</string>
    <string name="txt_ingeredients">Ingeredients:</string>
    <string name="txt_instructions">Instructions</string>
</resources>