<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/clToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colour_orange"
            app:expandedTitleTextAppearance="@style/expandedBarstyle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/txt_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_300dp">

                <ImageView
                    android:id="@+id/ivDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/txt_imageview"
                    android:foreground="@drawable/foreground_transperent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_shrimp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNameDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:text="@string/dummyName"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:theme="?attr/actionBarTheme"
                app:layout_collabsMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_20dp"
                app:cardBackgroundColor="@color/colorYellow"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/cvCalories">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp"
                    android:id="@+id/tvCalories"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_carbo"
                    android:textSize="@dimen/_12sp"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:id="@+id/tvCaloriesLabel"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_6dp"
                app:cardBackgroundColor="@color/colorBlue"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="@id/cvCalories"
                app:layout_constraintStart_toEndOf="@id/cvCalories"
                android:id="@+id/cvCarbo">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp"
                    android:id="@+id/tvCarbo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_calories"
                    android:textSize="@dimen/_12sp"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:id="@+id/tvCarboLabel"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginStart="@dimen/_6dp"
                app:cardBackgroundColor="@color/colorRed"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="@id/cvCarbo"
                app:layout_constraintStart_toEndOf="@id/cvCarbo"
                android:id="@+id/cvProtein">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/_7_2"
                    android:textSize="@dimen/_24sp"
                    android:id="@+id/tvProtein"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_protein"
                    android:textSize="@dimen/_12sp"
                    android:layout_marginBottom="@dimen/_30dp"
                    android:id="@+id/tvProteinLabel"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_40dp"
                android:text="@string/txt_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvCalories"
                android:id="@+id/tvDescription"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/txt_recipes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/tvLabelRecipes"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/txt_ingeredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelRecipes"
                android:id="@+id/tvLabelIngredients"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:text="@string/txt_ingeredients"
                android:layout_marginTop="@dimen/_5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelIngredients"
                android:id="@+id/tvIngredients"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/txt_instructions"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIngredients"
                android:id="@+id/tvLabelIntruction"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/txt_instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelIntruction"
                android:id="@+id/tvInstruction"/>








        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>